--- a/src/app/pages/subpages/termos-privacidade/termos-uso/termos-uso.page.html
+++ b/src/app/pages/subpages/termos-privacidade/termos-uso/termos-uso.page.html
@@ -1,13 +1,17 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>termos-uso</ion-title>
+
+    <ion-buttons slot="start">
+      <ion-button id="botao-toolbar">
+        <ion-icon name="arrow-back-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+
+    <div class="titulos-container">
+      <ion-title id="home-title">Termos de Uso</ion-title>
+
+    </div>
+
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">termos-uso</ion-title>
-    </ion-toolbar>
-  </ion-header>
-</ion-content>
