--- a/src/global.scss
+++ b/src/global.scss
@@ -1284,6 +1284,70 @@ ion-range::part(bar-active) {
 
 //-----------------------------------------------//
 
+//CONFIG-USER.SCSS
+
+//titulos
+#titulo-enderecos-config-user{
+  text-align: center;
+  font-size: 22px;
+  font-weight: 700;
+  color: #0e2b52;
+  margin-top: 40px;
+}
+//fim dos titulos
+
+//localização
+
+//texto entre button e input
+#text-entre-2-config-inicial{
+  text-align: center;
+  font-size: 20px;
+  margin: 5px 0px 10px 0px;
+  font-weight: 400;
+  color: #0e2b52;
+}
+//fim do texto entre button e input
+
+//fim da localização
+
+//letreiro distancia maxima
+#titulo-distancia-user{
+  width: max-content;
+  margin: auto;
+  text-align: left;
+  font-size: 22px;
+  font-weight: 400;
+  color: #0e2b52;
+  margin-top: 40px
+}
+//fim do letreiro distancia maxima
+
+.card-config-user{
+  background: transparent !important;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px !important;
+  --ion-item-background: transparent;
+  --ion-border-color: transparent;
+  border: 2px solid #0e2b52;
+  ion-card-content{
+    padding: 4px 10px 4px 10px !important; 
+    background: transparent !important;
+  }
+  .informacoes-div > h1{
+    margin: 0;
+    padding: 0;
+    margin: 0 0 2px 0;
+    font-size: 20px;
+    color: #0e2b52;
+    font-weight: 400;
+  }
+ 
+}
+
+
+//FIM DO CONFIG-USER.SCSS
+
+//-----------------------------------------------//
+
 /* ------------ FIM DO LIGHT MODE ------------ */
 
 
