--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -6,3 +6,9 @@
   ion-content {
     --background: transparent;
   }
+  .div-btSalvarConfig{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
