--- a/src/app/pages/subpages/termos-privacidade/privacidade-seguranca/privacidade-seguranca.page.html
+++ b/src/app/pages/subpages/termos-privacidade/privacidade-seguranca/privacidade-seguranca.page.html
@@ -17,20 +17,22 @@
       <ion-col>
         <p id="texto-termos-uso">
           <span>1. Aceitação dos Termos:</span> <br><br>
-          Ao utilizar o aplicativo <a>FilaMed</a>, o usuário declara que leu, compreendeu e concorda integralmente com os
-          presentes <a>Termos de Uso</a>. Caso não concorde, deve interromper imediatamente o uso do aplicativo. <br><br>
-
+          Ao utilizar o aplicativo Filamed, o usuário declara que leu, compreendeu e concorda
+          integralmente com os presentes Termos de Uso. Caso não concorde, deve interromper imediatamente o uso do
+          aplicativo.
 
 
           <span>2. Informações sobre o Aplicativo:</span> <br><br>
-          O <a>FilaMed</a> é um aplicativo desenvolvido pela empresa <a>FilaMed</a>, com o objetivo de contribuir para a saúde
-          pública. Sua função é calcular, em tempo real, a fila de hospitais e <a>Unidades de Pronto Atendimento (UPAs)</a>,
+          O <a>FilaMed</a> é um aplicativo desenvolvido pela empresa <a>FilaMed</a>, com o objetivo de contribuir para a
+          saúde
+          pública. Sua função é calcular, em tempo real, a fila de hospitais e <a>Unidades de Pronto Atendimento
+            (UPAs)</a>,
           auxiliando o usuário a decidir entre a unidade mais próxima ou outra com menor tempo de espera. <br><br>
 
 
 
           <span>3. Público-Alvo:</span> <br><br>
-            Este módulo é destinado exclusivamente a organizadores e criadores do aplicativo, com acesso restrito.
+          Este módulo é destinado exclusivamente a organizadores e criadores do aplicativo, com acesso restrito.
 
 
 
@@ -39,24 +41,30 @@
 
 
           <span>5. Uso Permitido e Proibido</span> <br><br>
-          O usuário se compromete a utilizar o aplicativo de forma <a>lícita</a> e <a>responsável</a>. <a>É expressamente proibido</a>:<br><br>
-          <a id="lista-termos-uso">5.1 Utilizar os contatos de emergência disponibilizados no app para efetuar ligações falsas ou indevidas;</a> <br><br>
-          <a id="lista-termos-uso">5.2 Utilizar o aplicativo para fins ilegais, imorais ou que possam causar prejuízo a terceiros.</a> <br> <br>
+          O usuário se compromete a utilizar o aplicativo de forma <a>lícita</a> e <a>responsável</a>. <a>É
+            expressamente proibido</a>:<br><br>
+          <a id="lista-termos-uso">5.1 Utilizar os contatos de emergência disponibilizados no app para efetuar ligações
+            falsas ou indevidas;</a> <br><br>
+          <a id="lista-termos-uso">5.2 Utilizar o aplicativo para fins ilegais, imorais ou que possam causar prejuízo a
+            terceiros.</a> <br> <br>
 
 
 
           <span>6. Interação entre Usuários:</span> <br><br>
-          O <a>FilaMed</a> não possui recursos de interação entre usuários (como chats, comentários ou postagens).<br> <br>
+          O <a>FilaMed</a> não possui recursos de interação entre usuários (como chats, comentários ou postagens).<br>
+          <br>
 
 
 
           <span>7. Propriedade Intelectual:</span> <br><br>
-          Todos os direitos relacionados ao aplicativo, incluindo <a>marca, design, código-fonte, layout, funcionalidades e
-          conteúdos</a>, pertencem exclusivamente à empresa <a>FilaMed</a>. É vedada qualquer <a>reprodução, modificação, distribuição
-          ou utilização</a> não autorizada do conteúdo do aplicativo. <br> <br>
+          Todos os direitos relacionados ao aplicativo, incluindo <a>marca, design, código-fonte, layout,
+            funcionalidades e
+            conteúdos</a>, pertencem exclusivamente à empresa <a>FilaMed</a>. É vedada qualquer <a>reprodução,
+            modificação, distribuição
+            ou utilização</a> não autorizada do conteúdo do aplicativo. <br> <br>
 
 
-          
+
           <span>8. Conteúdo de Usuários:</span> <br><br>
           O aplicativo não permite o envio de conteúdos por parte dos usuários. <br> <br>
 
@@ -66,7 +74,8 @@
           O Filamed coleta apenas dados de localização, necessários para o correto funcionamento do aplicativo. O app
           também integra recursos de terceiros, como:<br><br>
           <a id="lista-termos-uso">9.1 API de dados hospitalares;</a><br><br>
-          <a id="lista-termos-uso">9.2 Aplicativo de telefone (para realizar chamadas diretamente do celular);</a><br><br>
+          <a id="lista-termos-uso">9.2 Aplicativo de telefone (para realizar chamadas diretamente do
+            celular);</a><br><br>
           <a id="lista-termos-uso">9.3 Google Maps (para exibição de rotas e mapas).</a><br><br>
           O usuário, ao aceitar os Termos, autoriza o uso dessas integrações. <br> <br>
 
@@ -77,7 +86,8 @@
           O Filamed se destina apenas a fornecer informações estimadas sobre filas em UPAs. A empresa não se
           responsabiliza por: <br><br>
           <a id="lista-termos-uso">10.1 Eventuais erros, desatualizações ou indisponibilidade de dados;</a><br><br>
-          <a id="lista-termos-uso">10.2 Decisões tomadas pelo usuário com base nas informações do aplicativo;</a><br><br>
+          <a id="lista-termos-uso">10.2 Decisões tomadas pelo usuário com base nas informações do
+            aplicativo;</a><br><br>
           <a id="lista-termos-uso">10.3 Danos diretos ou indiretos decorrentes do uso inadequado do app.</a> <br> <br>
 
 
@@ -89,9 +99,10 @@
 
 
 
-          
-          <span>12. Foro e Legislação Aplicável:</span> <br><br> 
-          Os presentes Termos serão regidos pelas leis da <a>República Federativa do Brasil</a>. Fica eleito o foro da comarca
+
+          <span>12. Foro e Legislação Aplicável:</span> <br><br>
+          Os presentes Termos serão regidos pelas leis da <a>República Federativa do Brasil</a>. Fica eleito o foro da
+          comarca
           de <a>Criciúma/SC</a> para resolver quaisquer disputas oriundas destes Termos. <br> <br>
 
 
