resolvido um monte de bugs com o mapa e estilizado algumas coisas pequenas

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -22,8 +22,12 @@
   </div>
 
   <ion-refresher slot="fixed" (ionRefresh)="handleRefresh($event)">
-    <ion-refresher-content></ion-refresher-content>
+    <ion-refresher-content>
+
+    </ion-refresher-content>
   </ion-refresher>
+
+
 
   
 
